...
                android:layout_height="wrap_content"
                android:text="First Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/profile_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tom"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                android:layout_height="wrap_content"
                android:text="Last Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/profile_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Watson" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
...
                android:layout_height="wrap_content"
                android:text="Email"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="tfwatson@usc.edu" />
        </LinearLayout>

        <LinearLayout
...
                android:layout_height="wrap_content"
                android:text="Speaker Status"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/profile_speaker_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Native" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
...
